# BrickPython Changelog

## BrickPython v0.3.1

- Reduced sampling frequency so TkWindow shows correctly.

## BrickPython v0.3

- Added copyright and headers to all source files.
- Sensor configuration no longer requires import * - old version still works.

## BrickPython v0.2

- Improvements to documentation and installation structure.


## BrickPython v0.1.0

- First release